# LMCache-Ascend

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  setup.py
.github/workflows/: build-a2-check.yml  build-and-test.yml  code-quality.yml  report-test-results.yml
benchmark/v1/rag/: README.md  analysis.py  rag.py  utils.py
csrc/: CMakeLists.txt  cachegen_kernels.cpp  cachegen_kernels.h  framework_hal.cpp  mem_kernels.cpp  mem_kernels.h  pos_kernels.cpp  pos_kernels.h  pybind.cpp  utils.cpp  utils.h
csrc/common/: dcmi_management.cpp  dcmi_management.h  exception.h  framework_hal.h  managed_mem.cpp  managed_mem.h  mem_alloc.cpp  mem_alloc.h
csrc/hccl/: bindings.cpp
csrc/hccl_onesided/: CMakeLists.txt  bindings.cpp  onesided_agent.cpp  onesided_agent.h
csrc/hccl_pingpong/: CMakeLists.txt  batch_channel.cc  batch_channel.h  bindings.cpp  pingpong_agent.cpp  pingpong_agent.h  pingpong_utils.cpp  pingpong_utils.h
csrc/mindspore/: framework_hal.cpp  mem_kernels.cpp  mem_kernels.h  pybind.cpp
examples/: offload.py
examples/blending/: README.md  script.py
examples/kv_cache_reuse/share_across_instances/p2p_sharing/: README.md  example1_pingpong.yaml  example1_pingpong_30b.yaml  example2_pingpong.yaml  example2_pingpong_30b.yaml
lmcache_ascend/: __init__.py  hccl_onesided.py
lmcache_ascend/integration/patch/: apply_patch.py  base_patcher.py
lmcache_ascend/integration/patch/vllm/: cacheblend_patch.py
lmcache_ascend/integration/vllm/: lmcache_ascend_connector_v1.py  vllm_v1_adapter.py
lmcache_ascend/mindspore/: __init__.py
lmcache_ascend/mindspore/v1/: _tensor.py  memory_management.py  npu_connector.py  system_detection.py
lmcache_ascend/mindspore/v1/storage_backend/: __init__.py  abstract_backend.py  storage_manager.py
lmcache_ascend/mindspore/v1/storage_backend/connector/: mooncakestore_connector.py
lmcache_ascend/v1/: cache_engine.py  kv_format.py  kv_layer_groups.py  npu_connector.py  pd_proxy_memory_obj.py  proxy_memory_obj.py  system_detection.py  token_database.py  tokens_hash.py  transfer_context.py
lmcache_ascend/v1/blend/: blender.py  positional_encoding.py  utils.py
lmcache_ascend/v1/blend/attention/: attention.py
lmcache_ascend/v1/blend/models/: llama.py  models.py  qwen3.py  utils.py
lmcache_ascend/v1/lookup_client/: lmcache_lookup_client.py
lmcache_ascend/v1/multiprocess/: npu_context.py  server.py
lmcache_ascend/v1/npu_connector/: __init__.py  npu_connectors.py
lmcache_ascend/v1/storage_backend/: __init__.py  p2p_backend.py  pd_backend.py  storage_manager.py  utils.py
lmcache_ascend/v1/transfer_channel/: __init__.py  hccl_agent.py  hccl_channel.py  hccl_onesided_channel.py  hccl_onesided_protocol.py  hccl_pingpong_channel.py  hccl_pingpong_protocol.py
tests/: bootstrap.py  conftest.py  test_version_integrity.py
tests/mindspore/v1/: test_mem_kernels.py  utils.py
tests/v1/: test_cache_engine.py  test_connector.py  test_mem_kernels.py  test_memory_management.py  test_npu_connector.py  test_pos_kernels.py  test_remote_metadata.py  test_remote_mla_worker_id_as0.py  test_system_detection.py  test_token_database.py  utils.py
tests/v1/blend/: test_blend.py
tests/v1/multiprocess/: test_custom_types.py  test_npu_cache_context.py
tests/v1/storage_backend/: test_ascend_p2p_backend.py  test_fs_connector.py  test_local_cpu_backend.py  test_local_disk_backend.py
tests/v1/transfer_channel/: test_hccl_channel_write.py  test_hccl_onesided_channel.py  test_hccl_pingpong_channel.py
tools/: check_spdx_header.py
